--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                     <img src="https://cdn.sanity.io/images/w8f1ak3c/production/f445a3d15e318fd217579e88ec2c6d0140246403-3574x4467.jpg/DSC0078_Dexter%20Kim.jpg?rect=448,0,2679,4467&w=640&h=1067&fit=min&auto=format" alt="">
                     <div class="text" data-scroll data-scroll-speed="-2">
                         <div class="elem">
-                        <i class="ri-circle-fill"></i>
-                        <h5>shop</h5>
-                        <h4>home</h4>
-                        <i class="ri-arrow-drop-right-line"></i>
-                        <div class="elem2">
-                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7a2007de38624a0b2935416bf51a4584889aa232-5000x5000.png/Website%20Products%20(12).png?w=320&h=320&auto=format" uhgiud alt="">
-                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7d180ca25ade6277a215b634318056d551de9da8-5000x5000.png/Website%20Products%20(5).png?w=320&h=320&auto=format" alt="">
-                        </div>
+                            <i class="ri-circle-fill"></i>
+                            <h5>shop</h5>
+                            <h4>home</h4>
+                            <i class="ri-arrow-drop-right-line"></i>
+                            <div class="elem2">
+                                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7a2007de38624a0b2935416bf51a4584889aa232-5000x5000.png/Website%20Products%20(12).png?w=320&h=320&auto=format" uhgiud alt="">
+                                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7d180ca25ade6277a215b634318056d551de9da8-5000x5000.png/Website%20Products%20(5).png?w=320&h=320&auto=format" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -138,8 +138,8 @@
         </div>
         <div id="page5">
             <div class="good">
-                <h5>WORDS OF GOODNESS</h5>
-                <h5>MESSAGES OF LOVE & SUPPORT</h5>
+                <h4>WORDS OF GOODNESS</h4>
+                <h4>MESSAGES OF LOVE & SUPPORT</h4>
             </div>
             <div id="feature">
                 <div class="dets"><i class="ri-circle-line"></i><h5>m//0017 Barbara.</h5></div>
@@ -178,7 +178,7 @@
             </div>
         </div>
         <div id="page7">
-            <div id="info">
+            <div id="about">
                 <div class="contact">
                     <h2>CONNECT WITH US</h2>
                     <h1>Facebook</h1>
